--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -39,6 +39,7 @@
     <storage
             android:storageDescription="@string/storage_internal"
             android:emulated="true"
+            android:primary="true"
             android:mtpReserve="100" />
 
     <!-- external sd -->
