--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -38,7 +38,7 @@
     <string-array translatable="false" name="networkAttributes">
         <item>"wifi,1,1,2,-1,true"</item>
         <item>"bluetooth,7,7,0,-1,true"</item>
-        <item>"wifi_p2p,13,1,0,-1,true"</item>
+<!--        <item>"wifi_p2p,13,1,0,-1,true"</item> -->
         <item>"ethernet,9,9,9,-1,true"</item>
     </string-array>
 
@@ -194,5 +194,18 @@
 
     <!-- Device has a h/w rotation lock switch -->
     <bool name="config_hasRotationLockSwitch">true</bool>
+
+    <!-- Hardware 'face' keys present on the device, stored as a bit field.
+This integer should equal the sum of the corresponding value for each
+of the following keys present:
+1 - Home
+2 - Back
+4 - Menu
+8 - Assistant (search)
+16 - App switch
+32 - Camera
+For example, a device with Home, Back and Menu keys would set this
+config to 7. -->
+    <integer name="config_deviceHardwareKeys">0</integer>
 
 </resources>
