--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -208,4 +208,6 @@ For example, a device with Home, Back and Menu keys would set this
 config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
 
+    <!-- Disable lockscreen translucent decor by default -->
+    <bool name="config_enableLockScreenTranslucentDecor">true</bool>
 </resources>
